welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value c
var T = new Array[Color](c);
                         ^Array1:2: error: not found: value c
c=getMondeHauteur()
^